# computational-intelligen-2022

./: README.md  pyproject.toml
Lab1/: lab1.ipynb  lab1.py
lab2/: README.md  lab2.ipynb
