[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["MONA DAVARI s296589 <s296589@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
numpy = "^1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
